# discord.ml

./: README.md  discord.opam  dune-project  flake.nix
lib/: client.ml  client.mli  config.ml  config.mli  discord.ml  discord_effect.ml  discord_effect.mli  dune  interaction.ml  interaction.mli  interaction_response.ml  interaction_response.mli  slash_command.ml  slash_command.mli
